<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/translator_menu">

        <ListPreference
            app:defaultValue="google"
            app:entries="@array/translator_provider_entries"
            app:entryValues="@array/translator_provider_values"
            app:iconSpaceReserved="false"
            app:key="translator_provider"
            app:summary="@string/translator_provider_sum"
            app:title="@string/translator_provider"
            app:useSimpleSummaryProvider="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="groq_settings_category"
        app:title="Groq AI Settings">

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="groq_translator_api_key"
            app:summary="@string/groq_translator_api_key_sum"
            app:title="@string/groq_translator_api_key"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            app:defaultValue="llama-3.1-8b-instant"
            app:iconSpaceReserved="false"
            app:key="groq_translator_model"
            app:summary="@string/groq_translator_model_sum"
            app:title="@string/groq_translator_model"
            app:useSimpleSummaryProvider="false" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="groq_fetch_models"
            app:summary="@string/groq_translator_fetch_models_sum"
            app:title="@string/groq_translator_fetch_models" />

    </PreferenceCategory>

</PreferenceScreen>
